# hapROH

./: .gitignore  .nb-log-61374747.err.swp  .nb-log-61393761.err.swp  .nb-log-62485948.err.swp  README.md  gaojupyter.sbatch  jupyter.sbatch  jupyter.sbatch1  readme_developers.md  test_lowmem.ipynb
.ipynb_checkpoints/: README-checkpoint.md  jupyter-checkpoint.sbatch
Diverse/: list_anc_am.csv  list_roh_ancall15.csv  list_roh_ancall20.csv  list_roh_ancallALLChr.csv  list_roh_ancsard.csv  ll_10TSI_allHGref_200_400jump.csv  test.vcf
package/: README.md  change_log.md  pyproject.toml  setup.cfg  setup.py  upload_instructions.md
package/.ipynb_checkpoints/: README-checkpoint.md  change_log-checkpoint.md  setup-checkpoint.py  upload_instructions-checkpoint.md
package/hapROH/: run.py
package/hapROH.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
package/hapsburg/: cfunc.c  cfunc.html  cfunc.pyx  emissions.py  emissions_lowmem.py  hapCONX.py  hapCon_ROH.py  hapROH_WGS.py  hmm_inference.py  postprocessing.py  preprocessing.py  preprocessing_lowmem.py
package/hapsburg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/hapsburg/.ipynb_checkpoints/: hmm_inference-checkpoint.py  preprocessing-checkpoint.py  transitions-checkpoint.py
package/hapsburg/PackagesSupport/: fit_ne.py  hapsburg_run.py  pp_individual_roh_csvs.py  roh_expectations.py
package/hapsburg/PackagesSupport/.ipynb_checkpoints/: fit_ne-checkpoint.py  hapsburg_run-checkpoint.py  pp_individual_roh_csvs-checkpoint.py
package/hapsburg/PackagesSupport/h5_python/: h5_functions.py
package/hapsburg/PackagesSupport/h5_python/.ipynb_checkpoints/: h5_functions-checkpoint.py
package/hapsburg/PackagesSupport/loadEigenstrat/: loadEigenstrat.py  saveHDF5.py
package/hapsburg/PackagesSupport/loadEigenstrat/.ipynb_checkpoints/: loadEigenstrat-checkpoint.py  saveHDF5-checkpoint.py
package/hapsburg/PackagesSupport/parallel_runs/: helper_functions.py
package/hapsburg/PackagesSupport/parallel_runs/.ipynb_checkpoints/: helper_functions-checkpoint.py
package/hapsburg/figures/: plot_bars.py  plot_ibdx.py  plot_individual_roh.py  plot_posterior.py  plot_timelines.py
package/hapsburg/figures/.ipynb_checkpoints/: plot_bars-checkpoint.py  plot_individual_roh-checkpoint.py  plot_posterior-checkpoint.py
(+3227 files in other folders)
