[metadata]
author = Harald Ringbauer
author_email = harald_ringbauer@eva.mpg.de
license = GNU GPLv3+ 
license_files = LICENSE
description = Identify runs of homozygosity (hapROH) and contamination (hapCon) in low coverage ancient human DNA data (1240K SNPs) using modern reference panel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hringbauer/hapROH
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = 
    population genetics
    ancient DNA
    runs of homozygosity
    reference haplotypes
    aDNA contamination